--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.71.3",
     "react-native-paper": "^5.4.1",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-svg": "13.4.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
